Affiliate mapper, service, repository - refactoring